KB - added QueryBuilder.where overloads